k8s/base/netflix/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: netflix
spec:
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      serviceAccountName: netflix
      containers:
        - name: netflix
          image: shokohsc/netflix
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 120
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /ready
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 2000m
              memory: 1024M
