k8s/base/netflix/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netflix
  labels:
    app: netflix
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: netflix
