k8s/base/netflix/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix
spec:
  rules:
  - host: netflix.svc.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix
            port:
              number: 80
